<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScavengerHuntApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_welcome">Get ready to play!</string>
    
      <!-- Generic --> 
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>
    <string name="label_done">Done</string>
    
      <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">Log out</string>
    
       <!-- Login Screen --> 
    <string name="label_enterUsernamePasswordEmail">Enter your username, password and email</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your EMAIL</string>
    
    <string name="label_login_in_progress">Login in progress&#8230;</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait&#8230;</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string> 
    <string name="label_selectOption">What would you like to do?</string>
    <string name="label_newgame">Start a new Game</string>
    <string name="label_mygames">View Games I Created</string>
    <string name="label_gamesiamplaying">View Games I am Playing</string>
    <string name="label_joingame">Join a Game</string>
      
      <!-- New Game Create -->
    <string name="prompt_newgamename">What would you like to name your new game?</string>
    <string name="hint_newgamename">e.g. Classic Cars Hunt</string>
    <string name="label_setStartDate">Set Start Date</string>
    <string name="label_setEndDate">Set End Date</string>
    <string name="label_setStartTime">Set Start Time</string>
    <string name="label_setEndTime">Set End Time</string>
     
      <!-- Game Items Manage -->
    <string name="header_itemlist">Items to find for this game:</string>
    <string name="label_additem">Add Item</string>
    <string name="hint_additem">Add item? e.g. Yellow Volkswagen</string>
    
      <!-- Game Players Manage -->
    <string name="header_playerlist">Choose players for this game:</string>  
        
      <!-- View My Created Games -->
    <string name="header_myCreatedGamesList">Games I Created: (click to edit)</string>
    <string name="label_back">Back</string>
    
      <!--  Edit My Created Games -->
    <string name="prompt_editgamename">Would you like to rename this game?</string>
    <string name="hint_editgamename">e.g. Sports Cars Hunt</string>
    <string name="label_editStartDate">Edit Start Date</string>
    <string name="label_editStartTime">Edit Start Time</string>
    <string name="label_editEndDate">Edit End Date</string>
    <string name="label_editEndTime">Edit End Time</string>
    
      <!--  Game Items Edit  -->
    <string name="hint_edititem">Add new item?</string>  
    <string name="header_itemeditlist">Current items to find for this game:</string>
    
      <!--  Game Players Edit  -->
    <string name="header_currentplayerlist">Update players for this game?</string>
    <string name="hint_editremoveitem">(Click to remove items.)</string>
    
      <!--  View My Invited Games -->
    <string name="header_myInvitedGamesList">Games available: (click to join)</string>  
    
      <!--  Play Game  -->
    <string name="header_playGameItemList">Check to claim items you\'ve found:</string>  
      
  
</resources>
