<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header_myItemsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/prompt_newgamename"
        android:textSize="18.0sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newGame_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header_myItemsList"
        android:ems="10"
        android:hint="@string/hint_newgamename"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/newGameButton_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newGameButton_continue"
        android:layout_alignBottom="@+id/newGameButton_continue"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/label_cancel"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/newGameButton_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/label_continue"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/newGameButton_setEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newGameButton_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="44dp"
        android:text="@string/label_setEndTime" />

    <Button
        android:id="@+id/newGameButton_setEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newGameButton_setEndTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_setEndDate" />

    <Button
        android:id="@+id/newGameButton_setStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/label_setStartTime" />

    <Button
        android:id="@+id/newGameButton_setStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newGameButton_setStartTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_setStartDate" />

</RelativeLayout>