<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp" >
    
    <Button
        android:id="@+id/editPlayersButton_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editPlayersButton_cancel"
        android:layout_alignBottom="@+id/editPlayersButton_cancel"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/label_done"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/editPlayersButton_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/label_cancel"
        android:textSize="16sp"
        android:textStyle="normal" />
    
    <TextView
        android:id="@+id/header_currentPlayersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/header_currentplayerlist"
        android:textSize="18.0sp"
        android:textStyle="bold" />
    
    <ListView
        android:id="@+id/gamePlayersEditListView"
        android:layout_width="275dp"
        android:layout_height="204dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header_currentPlayersList" >
    </ListView>
    
</RelativeLayout>